# OneDriveDownloader

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-onedrive-downloader.md
docs/superpowers/specs/: 2026-03-13-onedrive-downloader-design.md
src/: app.py  app.tcss  auth.py  downloader.py  graph.py  models.py  quickxor.py
src/widgets/: folder_tree.py  status_panel.py
tests/: test_auth.py  test_downloader.py  test_graph.py  test_models.py  test_quickxor.py
