[project]
name = "onedrivedownloader"
version = "0.0.0"
description = "One-time OneDrive downloader with TUI"
license = {text = "MIT"}
authors = [
    {name = "Lexa Baldwin", email = "Lexa.40@proton.me"},
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "msal>=1.31.0",
    "httpx>=0.28.0",
    "textual>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
onedrive-dl = "src.app:main"
